<resources>
    <string name="app_name">Magic Quartet</string>
    <string name="title_activity_nutrition">Nutrition</string>
    <string name="title_activity_automobile">Gasoline</string>
    <string name="title_activity_house">Thermo</string>
    <string name="title_activity_tracking">Activity</string>

    <!-- activity tracking -->
    <string name="t_new_activity">New Activity</string>
    <string name="t_edit_activity">Update Activity</string>
    <string name="t_activities">Life is beautiful...</string>
    <string name="t_wanna_back">Do you want to go back?</string>
    <string name="t_wanna_update">Do you want to update activity?</string>
    <string name="t_wanna_delete">Do you want to delete activity?</string>
    <string name="t_act_save_success">Activity is saved successfully</string>
    <string name="t_act_update_success">Activity is updated successfully</string>
    <string name="t_act_delete_success">Activity is deleted successfully</string>
    <string name="t_ok">OK</string>
    <string name="t_cancel">Cancel</string>
    <string name="t_save">Save</string>
    <string name="t_update">Update</string>
    <string name="t_delete">Delete</string>
    <string name="t_stay">Stay in the page</string>
    <string name="t_author">Author: Suli Jin</string>
    <string name="t_version">Version: 1.0.0</string>
    <string name="t_help">
        Author: Suli Jin \t\t Version: 1.0.0 \n
        -----------------------------------------\n\n
        1. Help \n\n
        Click menu -> Help to show the helps about how to use the app. \n\n
        2. Activity Statistics \n\n
        Click menu -> Statistics to display how many minutes of activity the user does per month,
        and also show how much activity the user did per month. \n\n
        3. Add Activity \n\n
        Click the add icon to navigate to new activity page,
        where you can enter the information for new activity, and save new activity by clicking the Save button. \n\n
        4. Edit Activity \n\n
        Click the item in the activity list to navigate to the page to edit activity,
        where you can change the information, and update the activity by clicking the Update button,
        or delete the activity by clicking the Delete button. \n\n
    </string>
    <string-array name="t_activities">
        <item>Running</item>
        <item>Walking</item>
        <item>Biking</item>
        <item>Swimming</item>
        <item>Skating</item>
    </string-array>
    <string name="t_type">Type</string>
    <string name="t_time">Time</string>
    <string name="t_duration">Duration</string>
    <string name="t_comment">Comment</string>
    <string name="t_count_per_act">Count per activity for this month:\n</string>
    <string name="t_duration_per_act">Activity duration per month (in minutes): \n</string>
    <string name="t_start_at">start at </string>
    <string name="t_for"> for </string>
    <string name="t_min_note"> minutes. Note: </string>
    <string name="t_help_title">Help</string>
    <string name="t_stats_title">Statistics</string>
    <!-- auto -->
    <string name="auto_liters">Liters</string>
    <string name="auto_price">Price($/L)</string>
    <string name="auto_kilo">Kilometers</string>
    <string name="auto_avgPrice">Last Month Average Price($)</string>
    <string name="auto_totalCost">Last Month Total Cost($)</string>
    <string name="auto_histRecord">History</string>
    <string name="auto_histSummary">Summary</string>
    <string name="auto_save">Save</string>
    <string name="auto_saveConfirm">Information saved successfully!</string>
    <string name="auto_cancel">Cancel</string>
    <string name="auto_help">Help</string>
    <string name="auto_ok">OK</string>
    <string name="auto_helpTitle">Gasoline Application 1.0</string>
    <string name="auto_helpAuthor">Author: Zhenting Mai</string>
    <string name="auto_helpSave">“Save” - click to save your input</string>
    <string name="auto_helpCancel">"Cancel“ - click to cancel your input</string>
    <string name="auto_helpHist">“History” - click to check your consuming history</string>
    <string name="auto_helpSum">“Summary” - click to check monthly consumption of every year</string>
    <string name="auto_helpUpdate">Update Data - check your history and click the item you want to update</string>
    <string name="auto_helpInquire">Inquire Summary - go to the summary and type the year you want to check</string>
    <string name="auto_helpValue">Author: Zhenting Mai. Gasolin app Version 1.0. Save, to save your entry. Cancel, to
        cancel your entry. History Consumption, the records. Consuming Summary, the purchases per month.</string>
    <string name="auto_noRecord">No Record</string>
    <string name="auto_welcome">Welcome to use Gasoline App!</string>
    <string name="auto_cancelValue">Do you want to cancel your entry?</string>
    <string name="auto_yes">Yes</string>
    <string name="auto_no">No</string>
    <string name="auto_noCancel">Please continue to input your entry.</string>
    <string name="auto_btUpdate">Update</string>
    <string name="auto_btDelete">Delete</string>
    <string name="auto_textViewDate">Date</string>
    <string name="auto_jan">Jan</string>
    <string name="auto_feb">Feb</string>
    <string name="auto_mar">Mar</string>
    <string name="auto_apr">Apr</string>
    <string name="auto_may">May</string>
    <string name="auto_jun">Jun</string>
    <string name="auto_jul">Jul</string>
    <string name="auto_aug">Aug</string>
    <string name="auto_sep">Sep</string>
    <string name="auto_oct">Oct</string>
    <string name="auto_nov">Nov</string>
    <string name="auto_dec">Dec</string>
    <string name="autoSum_yearHint">Year</string>
    <string name="autoSum_inquire">Inquire</string>


    <string name="title_activity_automobile2">Automobile2Activity</string>

    <string name="SUNDAY">SUNDAY</string>
    <string name="MONDAY">MONDAY</string>
    <string name="TUESDAY">TUESDAY</string>
    <string name="WEDNESDAY">WEDNESDAY</string>
    <string name="THURSDAY">THURSDAY</string>
    <string name="FRIDAY">FRIDAY</string>
    <string name="SATURDAY">SATURDAY</string>


    <string-array name="weekday">
        <item>@string/SUNDAY</item>
        <item>@string/MONDAY</item>
        <item>@string/TUESDAY</item>
        <item>@string/WEDNESDAY</item>
        <item>@string/THURSDAY</item>
        <item>@string/FRIDAY</item>
        <item>@string/SATURDAY</item>
    </string-array>

    <string name="addNew">Add new temperature rule</string>
    <string name="delete">Delete temperature rule</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="setDayofWeek">Set Day of Week</string>
    <string name="setTemp">set temperature(0-100)</string>
    <string name="setHour">Set hour(0-23)</string>
    <string name="setMinute">Set minute(0-59)</string>
    <string name="deleterule">Delete this rule</string>
    <string name="cancel">Cancel</string>
    <string name="saveAsNewRule">Save as new rule</string>
    <string name="add">Add</string>
    <string name="day">day</string>
    <string name="hour">hour(0-23)</string>
    <string name="minute">minute(0-59)</string>
    <string name="temp">Temperature(0-100)</string>
    <string name="title_activity_toolbar">Toolbar</string>
    <string name="about">about</string>
    <string name="help">帮助</string>
    <string name="helpthermo">
        1. App Info \n\n
        Click menu -> About to show the application information. \n\n
        2. Help \n\n
        Click menu -> Help to show the helps about how to use the app. \n\n
        3. Add Activity \n\n
        Click the "Add new temperature rule" button to navigate to new activity page,
        where you can enter the information for new activity, and save new activity by clicking the "Save" button. \n\n
        4. Edit Activity \n\n
        Click the item in the activity list to navigate to the page to edit activity,
        where you can change the information, and update the activity by clicking the "Save" button, or add as a new activity by clicking the "Save As new rule" button,
        or delete the activity by clicking the "Delete this rule" button. \n\n

    </string>
    <string name="ID">ID</string>
    <color name="green">#ff00ff00</color>
    <string name="title_activity_toolbar_thermo">Toolbar_thermo</string>
    <string name="author">author:Xia Sheng</string>
    <string name="OK">OK</string>
    <string name="version">version: 1.0.0 </string>
    <string name="sure_to_delete">Are you sure to delete the record?</string>

    <string name="sure_to_cancel">sure to cancel?</string>
    <string name="f_wanna_back">go back to save?</string>
    <string name="f_ok">ok</string>
    <string name="f_cancel">no</string>
    <string name="f_history">history records</string>
    <string name="f_newrecord">new records</string>
    <string name="title_activity_f">food</string>
    <string name="f_welcome">welcom
    </string>
    <string name="f_saveConfirm">food information saved</string>
    <string name="f_delete_success">food information deleted</string>
    <string name="f_total_calories">Total calories taken yesterday :</string>
    <string name="f_average_calories">Average calories :</string>
    <string name="f_help">
        Author: Tianjun Jin \t\t Version: 1.0.0 \n
        -----------------------------------------\n\n
        1. Help \n\n
        Click menu -> Help to show the helps about how to use the app. \n\n
        2. Add Activity \n\n
        Click the ENTER NEW RECORDS button to navigate to new activity page,
        where you can enter the information for new activity, and save new activity by clicking the Save button. \n\n
        3. History Activity \n\n
        Click the HISTORY RECORDS button to navigate to another new activity page,
        where the list of the history records will be listed and in the records list to navigate to the page to edit these records.
        where you can change the information, and update the activity by clicking the Update button,
        or delete the activity by clicking the Delete button. \n\n
        4.When clicking the AVERAGE CALORIES button to show the average calories in the records
        5.When clicking the CALORIES_EATEN button to show the total calories eatten the day before.

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_noRecord">no records</string>
    <string name="f_update_success">Information is updated successful</string>
    <string name="f_static">static</string>
    <string name="title_activity_food">food</string>
    <string name="f_type">Enter the food type</string>
    <string name="f_carlories">Enter the calories amount</string>
    <string name="f_total_Fat">Enter the total_fat amount</string>
    <string name="f_carbohydrate">Enter the carbohydrate amount</string>



</resources>
