<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#8F91BF"
    tools:context="FragmentThermo">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/fragmentId"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:fontFamily="@font/petit_formal_script"
        android:text="@string/ID" />


    <Spinner
        android:id="@+id/fragmentWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fragmentId"
        android:layout_marginTop="23dp"
        android:entries="@array/weekday"
        android:fontFamily="@font/petit_formal_script" />

    <EditText
        android:id="@+id/fragmentHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fragmentWeek"
        android:layout_marginTop="19dp"
        android:hint="@string/setHour"
        android:fontFamily="@font/petit_formal_script"
        android:inputType="time"/>

    <EditText
        android:id="@+id/fragmentMinute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fragmentHour"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/petit_formal_script"
        android:hint="@string/setMinute" />

    <EditText
        android:id="@+id/fragmentTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fragmentMinute"
        android:layout_marginTop="19dp"
        android:hint="@string/setTemp"
        android:fontFamily="@font/petit_formal_script"
        android:inputType="number" />


    <Button
        android:id="@+id/button_delete_fg_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/deleterule" />

    <Button
        android:id="@+id/button_saveNewRule_fg_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/saveAsNewRule" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_saveNewRule_fg_h"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/update" />
</RelativeLayout>
</FrameLayout>
