<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#83a8ef"
    tools:context="AutomobileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/darker_gray"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#83a8ef"
        android:columnCount="2"
        android:rowCount="9"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/auto"
        >
        <TextView
            android:id="@+id/textView_title"
            android:layout_width="180dp"

            android:layout_gravity="center"
            android:layout_height="50dp"
            android:text="@string/title_activity_automobile"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/textView_blank"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />


        <Button
            android:id="@+id/button_history"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/auto_histRecord"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_summary"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/auto_histSummary"
            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/autoAvgPrice"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:layout_rowWeight="1"
            android:text="@string/auto_avgPrice"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/autoAvgPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="bottom|center_vertical|fill_vertical|center_horizontal"
            android:text="00"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/autoTotal"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/auto_totalCost"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/autoTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="bottom|center_vertical|fill_vertical|center_horizontal"
            android:text="00"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_litres"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:text="@string/auto_liters"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_litresValue"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_rowWeight="1"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:text="@string/auto_price"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_priceValue"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_kilos"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:text="@string/auto_kilo"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_kilosValue"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_blank2"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            />
        <TextView
            android:id="@+id/textView_blank3"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="50dp"
            />

        <Button
            android:id="@+id/autoBt_save"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_rowWeight="1"
            android:text="@string/auto_save"
            android:textStyle="bold" />

        <Button
            android:id="@+id/autoBt_delete"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_rowWeight="1"
            android:elevation="0dp"
            android:text="@string/auto_cancel"
            android:textStyle="bold" />





    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"

        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
